single template project is able to show also video as main file

--- a/src/sass/entries/project.scss
+++ b/src/sass/entries/project.scss
@@ -6,6 +6,7 @@
 @import "../../../node_modules/bower_components/uikit/scss/core/text.scss";
 @import "../../../node_modules/bower_components/uikit/scss/core/close.scss";
 @import "../../../node_modules/bower_components/uikit/scss/core/modal.scss";
+@import "../../../node_modules/bower_components/uikit/scss/core/utility.scss";
 @import "../../../node_modules/bower_components/uikit/scss/components/slidenav.scss";
 @import "../../../node_modules/bower_components/uikit/scss/components/slider.scss";
 
