--- a/src/sass/entries/project.scss
+++ b/src/sass/entries/project.scss
@@ -23,3 +23,9 @@
         padding-bottom: 0px !important;
     }
 }
+a.uk-slidenav {
+    color: rgba(220,220,220,1) !important;
+    &:hover {
+        color: #fff !important;
+    }
+}
