single project template v1

--- a/src/sass/entries/project.scss
+++ b/src/sass/entries/project.scss
@@ -23,6 +23,15 @@
         padding-bottom: 0px !important;
     }
 }
+
+.single-prj-content {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: normal;
+    font-style: normal;
+    font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 a.uk-slidenav {
     color: rgba(220,220,220,1) !important;
     &:hover {
