--- a/src/sass/uikit-common.scss
+++ b/src/sass/uikit-common.scss
@@ -12,6 +12,29 @@
 // Layout
 @import "../../node_modules/bower_components/uikit/scss/core/grid.scss";
 
+// Fonts
+@font-face {
+    font-family: 'Proxima Nova';
+    src: url('../../dist/fonts/proximanova-light-webfont.eot');
+    src: url('../../dist/fonts/proximanova-light-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../../dist/fonts/proximanova-light-webfont.woff') format('woff'),
+        url('../../dist/fonts/proximanova-light-webfont.ttf') format('truetype'),
+        url('../../dist/fonts/proximanova-light-webfont.svg#ProximaNovaLight') format('svg');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Proxima Nova';
+    src: url('../../dist/fonts/proximanova-reg-webfont.eot');
+    src: url('../../dist/fonts/proximanova-reg-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../../dist/fonts/proximanova-reg-webfont.woff') format('woff'),
+        url('../../dist/fonts/proximanova-reg-webfont.ttf') format('truetype'),
+        url('../../dist/fonts/proximanova-reg-webfont.svg#ProximaNovaReg') format('svg');
+    font-weight: 400;
+    font-style: normal;
+}
+
 body {
     line-height: 0.7 !important;
 }
