--- a/src/sass/entries/projects.scss
+++ b/src/sass/entries/projects.scss
@@ -1,1 +1,10 @@
-/**/
+// UIkit Common dependencies
+@import "../uikit-common.scss";
+
+// UIKit projects dependencies
+@import "../../../node_modules/bower_components/uikit/scss/core/cover.scss";
+@import "../../../node_modules/bower_components/uikit/scss/core/text.scss";
+
+[v-cloak] {
+  display: none;
+}
