projects page shows all projects

--- a/src/sass/entries/projects.scss
+++ b/src/sass/entries/projects.scss
@@ -2,6 +2,7 @@
 @import "../uikit-common.scss";
 
 // UIKit projects dependencies
+@import '../../../node_modules/bower_components/uikit/scss/core/overlay.scss';
 @import "../../../node_modules/bower_components/uikit/scss/core/cover.scss";
 @import "../../../node_modules/bower_components/uikit/scss/core/text.scss";
 
