template-projects: spinner implementation

--- a/src/sass/entries/projects.scss
+++ b/src/sass/entries/projects.scss
@@ -6,6 +6,7 @@
 @import "../../../node_modules/bower_components/uikit/scss/core/cover.scss";
 @import "../../../node_modules/bower_components/uikit/scss/core/text.scss";
 @import "../../../node_modules/bower_components/uikit/scss/core/button.scss";
+@import "../partials/spinner.scss";
 
 [v-cloak] {
   display: none;
